refactor: test 클래스 패키지화
domain > domain.people