@@ -1,4 +1,4 @@
-package laddergame.domain;
+package laddergame.domain.people;
 
 import laddergame.domain.people.People;
 import org.junit.jupiter.api.DisplayName;
@@ -8,6 +8,7 @@ import org.junit.jupiter.params.provider.NullSource;
 import org.junit.jupiter.params.provider.ValueSource;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -27,7 +28,7 @@ class PeopleTest {
     @ParameterizedTest
     @NullSource
     void peopleNamesNullInput(String nullName) {
-        List<String> names = List.of(nullName);
+        List<String> names = Arrays.asList(nullName);
         assertThrows(IllegalArgumentException.class
                 , () -> new People(names));
     }
